// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

02/28/2010
	r217 [Jobbie]
	* Mado Gear is usable without Madolicense skill upgraded. Without the license your movement speed will be 50%.
	- When in Mado Gear Blacksmith and Mastersmith skills are unusable.
	* Cannot use the skill Return to El Dicaste when mounted in Mado.
	* Some clean up to the state "ridingwarg" and "warg".
	* Minor clean up to skill Cross Ripper Slasher avoiding redundant sc checking.
	* Fix the bonus given of Tooth of Warg skill.
	* Minor fix to NC_TRAININGAXE, GN_REMODELING_CART, GN_TRAINING_SWORD hitrate bonus.
	* NC_TRAININGAXE should work with Mace.
	* Minor fix to new poison items and in const.txt. 

02/27/2010
	r216 [pakpil]
	* Minor fix in GC_POISONINGWEAPON. Removed extra sound effect when the weapon is poisoned. Bug report 209.
	* Minor fix in GC_ROLLINGCUTTER. The counter is reseted when you move from your place. Bug report 209.

02/26/2010
	r215 [pakpil]
	* Added missing file in r214.

	r214 [pakpil]
	* Added GC_RESEARCHNEWPOISON, GC_CREATENEWPOISON and GC_POISONINGWEAPON skills.
	- Added all poisons but still need more test.
	- Added new file with all skill that Magic Mushroom should cast. Magic Mushroom don't cast skill in mobs. Still need more test.
	* Improved clif_skill_fail packet to use it propertly with some skills. Still need more fix.
	* Improved makerune, it's uses skill_produce_mix_list right now instead clif_rune_create_list.

02/24/2010
	r213 [Rytech]
	*Added official names for mechanic FAW monsters. Also properly assigned each elemental version to each ID.
	-You can see what element tower belongs on what ID by looking at the lub files.
	-Also switched the skills used for 2 of the magic decoy towers.
	*Corrected a incorrectly set ID for SO_ENDMARK in the skill_require_db.

02/24/2010
	r212 [pakpil]
	* Added GC_WEAPONBLOCKING, GC_WEAPONCRUSH and GC_COUNTERSLASH skills.

02/23/2010